--- a/Base.tex
+++ b/Base.tex
@@ -5,6 +5,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} 
 
+%\usepackage{requerimiento}
+\usepackage{chapterfolder}
+\usepackage{listings}
 
 \usepackage{graphicx}
 \usepackage{graphics}
@@ -113,14 +116,14 @@
 	
 	\cfinput{capitulo5/instalador}
 	
-	\chapter{Pruebas}
-	\cfinput{capitulo7/pruebas}
+	%\chapter{Pruebas}
+	%\cfinput{capitulo7/pruebas}
 	\chapter{Conclusiones}
 	\cfinput{capitulo7/conclusiones}
 	\chapter{Trabajo a futuro} \label{futurolol}
 	\cfinput{capitulo7/trabajoafuturo} 
 	\cfinput{capitulo7/referencias}\label{referencias}
-	
+	\cfinput{capitulo7/caso}
 	\chapter{Anexos} 
 	\cfinput{capitulo6/a}\label{anexoa}
 	\cfinput{capitulo6/b}\label{anexob}
