--- a/capitulo2/marcoteorico.tex
+++ b/capitulo2/marcoteorico.tex
@@ -11,7 +11,7 @@ El término Big Data se refiere a cantidades enormes de información, por ejempl
 Al ser el Big Data un concepto emergente y relativamente nuevo, se han tenido ciertas dificultades para definirlo de manera uniforme. Debido a las dimensiones de todo lo que conlleva entender Big Data, resultó conveniente entre los estudiosos del tema definir y acentuar las magnitudes que lo definen. Estas magnitudes se conocen como las 3 Vs del Big Data.
 
 \begin{enumerate}
-	\item \textbf{Volumen:} Con Big Data, se tendrán que procesar enormes volúmenes de información. Este punto es importante ya que el crecimiento de la nececidad de almacenamiento de datos en el mundo moderno, crece de forma exponencial.\cite{bigDataDef}
+	\item \textbf{Volumen:} Con Big Data, se tendrán que procesar enormes volúmenes de información. Este punto es importante ya que la nececidad de almacenamiento de datos en el mundo moderno, crece de forma exponencial.\cite{bigDataDef}
 	\item \textbf{Velocidad:} Usando Big Data, se abre la posibilidad de acceso y flujo de datos a velocidades que no se podrían conseguir de manera convencional.\cite{bigDataDef}
 	\item \textbf{Variedad:} Procesamiento de datos de naturaleza heterogénea, es decir, múltiples tipos de datos.\cite{bigDataDef}
 \end{enumerate}
