--- a/capitulo7/conclusiones.tex
+++ b/capitulo7/conclusiones.tex
@@ -1,1 +1,2 @@
 \section{Conclusiones}
+Puede decirse con toda certeza que se concretaron las actividades y entregables como se planificó en el cronograma para Trabajo Terminal 1. Se obtuvieron los resultados esperados, los cuales fueron validados con las pruebas realizadas, por lo que los prototipos trabajan adecuadamente. Durante la realización de este primer entregable, pudimos identificar la necesidad de agregar a nuestros productos esperados un instalador que simplifique la preparación del ambiente de análisis de datos \emph{Luminus} al usuario experto. Actualmente ya se está trabajando en la construcción de ese instalador, así como en los demás prototipos que sí fueron planificados desde un principio.\\
