--- a/cdt/cdtAnalisis.sty
+++ b/cdt/cdtAnalisis.sty
@@ -52,7 +52,7 @@
 
 %-------------------------------------------------------------------------------------------
 % Definición de iconos
-\newcommand\UCactor{\includegraphics[height=11pt]{images/uc/actor}}
+\newcommand\UCactor{\includegraphics[height=11pt]{images/uc/actor.png}}
 \newcommand\UCsist{\includegraphics[height=11pt]{images/uc/usecase}}
 
 
@@ -686,7 +686,7 @@
 % Comando para escribir una trayectoria principal
 % use: 
 % \begin{UCtrayectoria}
-%    \UCpaso[\UCActor] Oprime el botón buscar
+%    \so[\UCActor] Oprime el botón buscar
 %    \UCpaso[\UCsist] Verifica que el usuario tenga permisos \refTray{IDTrayectoria}
 %    \UCpaso[\UCsist] El sistema ...
 %    \UCpaso[\UCsist] El sistema ...
