--- a/capitulo1/estadoarte.tex
+++ b/capitulo1/estadoarte.tex
@@ -1,6 +1,7 @@
 \hypertarget{seccion:IniciarSesion}{\vspace{1pt}}
 \newpage
 \section{Estado del arte}
+\label{estadoArte}
 Actualmente en el mercado existen diferentes alternativas para los usuarios que busquen hacer uso de Big Data. Las alternativas encontradas, podrían dividirse en 2 tipos:\\
 \begin{itemize}
 	\item Software que ya contiene algoritmos algoritmos de minería de datos implementados.\\
@@ -34,8 +35,7 @@ Actualmente en el mercado existen diferentes alternativas para los usuarios que 
 \end{itemize}
 
 Podría decirse que \emph{Luminus} es un híbrido entre las dos clasificaciones anteriormente citadas. Las principales características de \emph{Luminus} son las siguientes:
-\begin{itemize}
-	\item Trabaja con datos que se encuentra en distintos equipos de cómputo (Red distribuida).\\ 
+\begin{itemize}	\item Trabaja con datos que se encuentra en distintos equipos de cómputo (Red distribuida).\\ 
 	\item El usuario puede seleccionar el algoritmo de minería de datos a utilizar para su funcionamiento dentro de un listado de algoritmos disponibles.\\ 
 	\item Es capaz de detectar cuando alguno de los nodos de datos es modificado antes de resolver un determinado problema.\\
 	\item Los datos son extraídos directamente de los repositorios en tiempo real.\\
