--- a/capitulo1/justificacion.tex
+++ b/capitulo1/justificacion.tex
@@ -19,15 +19,15 @@ empresas son los principales clientes potenciales. Esto debido a que la mayoría
 bitácoras que contienen información sobre sus ingresos y egresos. Toda esa información será la materia prima que será utilizada
 por la herramienta para la generación de conocimiento.
 \\
-Si bien, existen algunas implementaciones comerciales (las cuales ya se han mencionado en los apartados previos) que realizan la
+Si bien, existen algunas implementaciones comerciales como puede verse en la sección \nameref{estadoArte} que realizan la
 automatización de la implementación de Big Data, son realmente costosas en recursos de cómputo, y el licenciamiento tiene un
 costo elevado con relación a los usuarios y/o equipos a usar \cite{refi9}. Algunas implementaciones están basadas en máquinas virtuales,
 que, si bien, automatizan todo el trabajo, de igual forma resultan costosas con relación al equipo necesario y dinero invertido \cite{refi6}.
 Además, el costo de las herramientas comerciales más robustas puede llegar a los cientos de miles de pesos.
 \\
-Para la realización de esta propuesta se requerirá dominio en el manejo de bases de datos relacionales y no relacionales;
-conocimiento de técnicas de minería de datos y su adecuada aplicación; manejo de herramientas y Frameworks dedicados al
-desarrollo de aplicaciones que se ejecuten de manera distribuida \cite{refi10}; conocimiento en el ámbito de complejidades algorítmicas
-para así poder justificar la mejora en la eficiencia de esta herramienta con respecto a las otras ya existentes; manejo de distintos
-lenguajes de programación, debido a que el lenguaje que se utilizara para el desarrollo de la aplicación principal será distinto al
-lenguaje que se utilizara para la implementación de los algoritmos de minería de datos.
+% Para la realización de esta propuesta se requerirá dominio en el manejo de bases de datos relacionales y no relacionales;
+% conocimiento de técnicas de minería de datos y su adecuada aplicación; manejo de herramientas y Frameworks dedicados al
+% desarrollo de aplicaciones que se ejecuten de manera distribuida \cite{refi10}; conocimiento en el ámbito de complejidades algorítmicas
+% para así poder justificar la mejora en la eficiencia de esta herramienta con respecto a las otras ya existentes; manejo de distintos
+% lenguajes de programación, debido a que el lenguaje que se utilizara para el desarrollo de la aplicación principal será distinto al
+% lenguaje que se utilizara para la implementación de los algoritmos de minería de datos.
