--- a/capitulo7/referencias.tex
+++ b/capitulo7/referencias.tex
@@ -50,9 +50,9 @@
 	\textit{Big Data: realidades, retos y limitaciones}, Julio 16, 2017, de Excelsior Sitio web:
 	http://www.excelsior.com.mx/opinion/opinion-del-experto-nacional/2017/07/16/1175906	
 	%ref
-	\bibitem{refi10} \textsc{Max,D},(2017)
-	\textit{ An overview of Distributed Computing frameworks.}, Agosto 18, 2017, de https://users.cs.duke.edu Sitio web:
-	https://users.cs.duke.edu/~maxdml/drupal/?q=distributed-computing-intro
+	% \bibitem{refi10} \textsc{Max,D},(2017)
+	% \textit{ An overview of Distributed Computing frameworks.}, Agosto 18, 2017, de https://users.cs.duke.edu Sitio web:
+	% https://users.cs.duke.edu/~maxdml/drupal/?q=distributed-computing-intro
 	%ref
 	\bibitem{dockermalo} \textsc{The Apache Software Foundation} (2018)
 	\textit{Launching Applications Using Docker Containers}, Marzo 16, 2018, de Apache Hadoop. Sitio web: https://hadoop.apache.org/docs/r3.0.1/hadoop-yarn/hadoop-yarn-site/DockerContainers.html
@@ -76,7 +76,7 @@
 	%ref
 	\bibitem{c4.5} \textsc{Sefik Ilkin Serengil} (2018) \textit{A Step By Step C4.5 Decision Tree Example}, Mayo 13, 2018, de Sefik Ilkin Serengil. Sitio web: https://sefiks.com/2018/05/13/a-step-by-step-c4-5-decision-tree-example/
 	%ref
-	\bibitem{knn} \textsc{Deephanshu Bhalla} (2016) \textit{K NEAREST NEIGHBOR : STEP BY STEP TUTORIAL}, Septiembre 30, 2016, de Deephanshu Bhalla. Sitio web: https://www.listendata.com/2017/12/k-nearest-neighbor-step-by-step-tutorial.html
+	\bibitem{KNN} \textsc{Deephanshu Bhalla} (2016) \textit{K NEAREST NEIGHBOR : STEP BY STEP TUTORIAL}, Septiembre 30, 2016, de Deephanshu Bhalla. Sitio web: https://www.listendata.com/2017/12/k-nearest-neighbor-step-by-step-tutorial.html
 	%ref
 	\bibitem{KMeans} \textsc{Andrea Trevino} (2016) \textit{Introduction to K-means Clustering}, Diciembre 6, 2016, de Oracle. Sitio web: https://www.datascience.com/blog/k-means-clustering
 	%ref
